--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
      crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>HOME</title>
+    <title>producto</title>
 </head>
 <body>
   <header class="container-fluid">
